--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       align-items: center;
       height: 100vh;
       flex-direction: column;
+      color: white;
+      font-family: Arial, sans-serif;
     }
     #image {
       max-width: 100%;
@@ -43,6 +45,15 @@
       margin: 0 10px;
       padding: 10px 20px;
       font-size: 18px;
+      border: none;
+      border-radius: 8px;
+      background-color: #444;
+      color: white;
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+    button:hover {
+      background-color: #666;
     }
     footer {
       position: fixed;
@@ -71,9 +82,10 @@
 <body>
 
   <img id="image" src="https://beyzamucahid.github.io/static/img/cover.png" alt="ilk görsel">
+
   <div id="buttons">
-    <button onclick="alert('Katıldınız!')">Evet</button>
-    <button onclick="alert('Katılmadınız!')">Hayır</button>
+    <button onclick="katil()">Evet</button>
+    <button onclick="katilma()">Hayır</button>
   </div>
 
   <footer>
@@ -96,6 +108,14 @@
       }
       showingFirst = !showingFirst;
     });
+
+    function katil() {
+      window.location.href = "https://forms.gle/XoLKGpewkzDzoxCW8";
+    }
+
+    function katilma() {
+      location.reload();
+    }
   </script>
 
 </body>
