--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       max-width: 100%;
       max-height: 90vh;
       cursor: pointer;
-      transition: transform 0.2s ease;
+      transition: transform 0.3s ease;
     }
     #image:hover {
-      transform: scale(1.01);
+      transform: scale(1.02);
     }
     #buttons {
       display: none;
@@ -50,20 +50,23 @@
       background-color: #444;
       color: white;
       cursor: pointer;
-      transition: background-color 0.2s;
+      transition: background-color 0.3s;
     }
     button:hover {
       background-color: #666;
     }
-    footer {
+    /* Navbar Stilleri */
+    nav {
       position: fixed;
-      bottom: 0;
+      top: 0;
+      left: 0;
       width: 100%;
       background-color: #111;
       padding: 10px 0;
       text-align: center;
+      z-index: 10;
     }
-    footer a {
+    nav a {
       color: #fff;
       margin: 0 20px;
       text-decoration: none;
@@ -74,12 +77,18 @@
       background-color: #333;
       transition: background-color 0.2s;
     }
-    footer a:hover {
+    nav a:hover {
       background-color: #555;
     }
   </style>
 </head>
 <body>
+
+  <!-- Navbar -->
+  <nav>
+    <a href="https://beyzamucahid.github.io/">Ana Sayfa</a>
+    <a href="https://beyzamucahid.github.io/description">Detay & Katılım</a>
+  </nav>
 
   <img id="image" src="https://beyzamucahid.github.io/static/img/cover.png" alt="ilk görsel">
 
@@ -87,11 +96,6 @@
     <button onclick="katil()">Evet</button>
     <button onclick="katilma()">Hayır</button>
   </div>
-
-  <footer>
-    <a href="https://beyzamucahid.github.io/">Ana Sayfa</a>
-    <a href="https://beyzamucahid.github.io/detay">Detay & Katılım</a>
-  </footer>
 
   <script>
     let showingFirst = true;
