--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
       top: 0;
       left: 0;
       width: 100%;
-      background-color: #111;
+      background-color: #B76E55; /* Navbar arka planı */
       padding: 10px 0;
       text-align: center;
       z-index: 10;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Hafif gölge */
     }
     nav a {
       color: #fff;
@@ -81,12 +82,13 @@
       font-weight: bold;
       padding: 8px 16px;
       border-radius: 8px;
-      background-color: #333;
-      transition: background-color 0.2s;
+      background-color: #6F4F33; /* Alt sınırdaki kahverengi tonunda yazı arka planı */
+      transition: background-color 0.3s;
     }
     nav a:hover {
-      background-color: #555;
+      background-color: #8C5A3C; /* Hover'da biraz daha koyu kahverengi */
     }
+
   </style>
 </head>
 <body>
