--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     .swiper {
       width: 100%;
       height: 100vh;
-      margin-top: 70px; /* Navbar boşluğu */
+      margin-top: 70px;
     }
 
     .swiper-slide {
@@ -68,6 +68,7 @@
       justify-content: center;
       align-items: center;
       background: #fff;
+      flex-direction: column;
     }
 
     .swiper-slide img {
@@ -76,9 +77,24 @@
       object-fit: contain;
     }
 
+    .scroll-down {
+      position: absolute;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 24px;
+      animation: bounce 1.5s infinite;
+      color: #6F4F33;
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translate(-50%, 0); }
+      50% { transform: translate(-50%, 10px); }
+    }
+
     .swiper-button-next,
     .swiper-button-prev {
-      color: #6F4F33;
+      display: none;
     }
 
     .swiper-pagination-bullet {
@@ -98,6 +114,11 @@
       .swiper-slide img {
         max-height: 70vh;
       }
+
+      .scroll-down {
+        font-size: 20px;
+        bottom: 20px;
+      }
     }
   </style>
 </head>
@@ -114,15 +135,13 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <img src="https://beyzamucahid.github.io/static/img/cover.png" alt="Görsel 1">
+        <div class="scroll-down">⬇</div>
       </div>
       <div class="swiper-slide">
         <img src="https://beyzamucahid.github.io/static/img/cover2.png" alt="Görsel 2">
       </div>
     </div>
 
-    <!-- Oklar ve Noktalar -->
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
     <div class="swiper-pagination"></div>
   </div>
 
@@ -130,14 +149,15 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
     const swiper = new Swiper('.swiper', {
+      direction: 'vertical',
       loop: true,
       pagination: {
         el: '.swiper-pagination',
         clickable: true
       },
-      navigation: {
-        nextEl: '.swiper-button-next',
-        prevEl: '.swiper-button-prev'
+      mousewheel: true,
+      keyboard: {
+        enabled: true
       }
     });
   </script>
