--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Beyza & Mucahid Wedding</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Favicon -->
-  <link rel="icon" href="https://beyzamucahid.github.io/static/img/cover.png" type="image/png">
+  <link rel="icon" href="https://beyzamucahid.github.io/static/img/cover.png" type="image/png" />
 
-  <!-- Meta -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Open Graph -->
   <meta property="og:title" content="Beyza & Mucahid Wedding" />
   <meta property="og:description" content="Bir ömür diye çıktığımız bu yolda sizlerin de bize eşlik etmesinden mutluluk duyarız..." />
   <meta property="og:image" content="https://beyzamucahid.github.io/static/img/cover.png" />
@@ -64,43 +64,37 @@
     .swiper {
       width: 100%;
       height: 100vh;
-      margin-top: 70px; /* Navbar yüksekliği */
+      margin-top: 70px;
     }
 
     .swiper-slide {
-      position: relative;
       display: flex;
       flex-direction: column;
-      align-items: flex-start; /* görseller top hizalı */
       justify-content: flex-start;
+      align-items: center;
       padding-top: 20px;
       background: #fff;
-      width: 100%;
       height: 100%;
     }
 
     .swiper-slide img {
-      width: 100%;
+      width: 90%;
       max-width: 1000px;
       height: auto;
+      max-height: 80vh;
       object-fit: contain;
-      margin: 0 auto;
     }
 
     .scroll-down {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 10000;
+      margin-top: 20px;
       animation: bounceDown 2s infinite;
       pointer-events: none;
-      opacity: 1;
+      opacity: 0.9;
     }
 
     @keyframes bounceDown {
-      0%, 100% { transform: translateX(-50%) translateY(0); opacity: 0.9; }
-      50% { transform: translateX(-50%) translateY(10px); opacity: 1; }
+      0%, 100% { transform: translateY(0); opacity: 0.8; }
+      50% { transform: translateY(10px); opacity: 1; }
     }
 
     .swiper-button-next,
@@ -118,16 +112,8 @@
         margin: 0 8px;
       }
 
-      nav {
-        padding: 10px 0;
-      }
-
       .swiper-slide img {
-        max-height: 70vh;
-      }
-
-      .scroll-down {
-        bottom: 10px;
+        max-height: 65vh;
       }
     }
 
@@ -150,9 +136,10 @@
   <!-- Swiper Slider -->
   <div class="swiper">
     <div class="swiper-wrapper">
+
       <!-- Slide 1 -->
       <div class="swiper-slide">
-        <img src="https://beyzamucahid.github.io/static/img/cover.png" alt="Görsel 1">
+        <img src="https://beyzamucahid.github.io/static/img/cover.png" alt="Görsel 1" />
         <div class="scroll-down">
           <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#6F4F33" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M12 5v14" />
@@ -163,8 +150,10 @@
 
       <!-- Slide 2 -->
       <div class="swiper-slide">
-        <img src="https://beyzamucahid.github.io/static/img/cover2.png" alt="Görsel 2">
+        <img src="https://beyzamucahid.github.io/static/img/cover2.png" alt="Görsel 2" />
+        <!-- BU SLAYTTA OK YOK -->
       </div>
+
     </div>
 
     <div class="swiper-pagination"></div>
