--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Beyza & Mucahid Wedding</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
   <!-- Favicon -->
   <link rel="icon" href="https://beyzamucahid.github.io/static/img/cover.png" type="image/png" />
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
   <style>
-    html, body, .swiper, .swiper-slide {
+    html, body {
       margin: 0; padding: 0;
       background: #f6f5f4;
       font-family: Arial, sans-serif;
@@ -53,55 +53,37 @@
 
     .swiper {
       width: 100%;
-      height: 100vh;
+      height: calc(100vh - 70px);
       margin-top: 70px;
     }
 
-    /* Slide yapısını optimize et */
     .swiper-slide {
+      width: 100%;
+      height: 100%;
       display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
-      padding: 20px 0 40px;
       background-color: #f6f5f4;
-      height: auto;          /* yükseklik otomatik */
-      min-height: calc(100vh - 70px); /* navbar hariç tam ekran yüksekliği */
-      overflow: visible;     /* zoom taşmasını engellemek için */
-    }
-
-    /* Zoom container zoom için */
-    .swiper-zoom-container {
-      width: 90%;
-      max-width: 1000px;
-      height: auto;
-      overflow: hidden; /* zoom yaparken taşma */
     }
 
     .swiper-slide img {
-      width: 100%;
-      height: auto;
-      max-height: 80vh;
+      max-width: 100%;
+      max-height: 100%;
       object-fit: contain;
-      user-select: none; /* Zoom esnasında resmin seçilmesini engelle */
+      user-select: none;
       -webkit-user-drag: none;
     }
 
     .scroll-down {
-      margin-top: 20px;
+      position: absolute;
+      bottom: 20px;
       animation: bounceDown 2s infinite;
       pointer-events: none;
-      opacity: 0.9;
     }
 
     @keyframes bounceDown {
       0%, 100% { transform: translateY(0); opacity: 0.8; }
       50% { transform: translateY(10px); opacity: 1; }
-    }
-
-    .swiper-button-next,
-    .swiper-button-prev {
-      display: none;
     }
 
     .swiper-pagination-bullet {
@@ -112,21 +94,6 @@
       nav a {
         font-size: 16px;
         margin: 0 8px;
-      }
-
-      .swiper-slide img {
-        max-height: 65vh;
-      }
-
-      .scroll-down {
-        margin-top: 10px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .scroll-down svg {
-        width: 28px;
-        height: 28px;
       }
     }
   </style>
@@ -156,9 +123,7 @@
 
       <!-- Slide 2 (Zoom) -->
       <div class="swiper-slide">
-        <div class="swiper-zoom-container">
-          <img src="https://beyzamucahid.github.io/static/img/cover2.png" alt="Görsel 2" />
-        </div>
+        <img src="https://beyzamucahid.github.io/static/img/cover2.png" alt="Görsel 2" data-swiper-zoomable="true" />
       </div>
 
     </div>
@@ -176,12 +141,10 @@
         clickable: true
       },
       mousewheel: true,
-      keyboard: {
-        enabled: true
-      },
+      keyboard: true,
       zoom: {
         maxRatio: 3,
-        toggle: true, // dokununca zoom kalıcı
+        toggle: true
       }
     });
   </script>
