--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <title>Beyza & Mucahid Wedding</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <!-- Open Graph Etiketleri -->
+  <meta property="og:title" content="Beyza & Mucahid Wedding" />
+  <meta property="og:description" content="Bir ömür diye çıktığımız bu yolda sizlerin de bize eşlik etmesinden mutluluk duyarız..." />
+  <meta property="og:image" content="https://beyzamucahid.github.io/static/img/cover.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://beyzamucahid.github.io/" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />-->
 
   <!-- Favicon -->
   <link rel="icon" href="https://beyzamucahid.github.io/static/img/cover.png" type="image/png" />
@@ -115,16 +122,18 @@
     }
 
     .scroll-down {
-      margin-top: 20px;
-      margin-bottom: 10px;
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
       animation: bounceDown 2s infinite;
       pointer-events: none;
       z-index: 10;
     }
 
     @keyframes bounceDown {
-      0%, 100% { transform: translateY(0); opacity: 0.8; }
-      50% { transform: translateY(10px); opacity: 1; }
+      0%, 100% { transform: translate(-50%, 0); opacity: 0.8; }
+      50% { transform: translate(-50%, 10px); opacity: 1; }
     }
 
     .swiper-pagination-bullet {
@@ -155,6 +164,10 @@
       .swiper-slide img {
         max-height: 70vh;
       }
+      
+      .scroll-down {
+        bottom: 15px;
+      }
     }
 
     @media (max-width: 480px) {
@@ -179,7 +192,7 @@
       }
       
       .scroll-down {
-        margin-top: 10px;
+        bottom: 10px;
       }
     }
   </style>
