--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <title>Beyza & Mucahid Wedding</title>
-  <!-- Open Graph Etiketleri -->
   <meta property="og:title" content="Beyza & Mucahid Wedding" />
   <meta property="og:description" content="Bir ömür diye çıktığımız bu yolda sizlerin de bize eşlik etmesinden mutluluk duyarız..." />
   <meta property="og:image" content="https://beyzamucahid.github.io/static/img/cover.png" />
@@ -12,10 +11,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-  <!-- Favicon -->
   <link rel="icon" href="https://beyzamucahid.github.io/static/img/cover.png" type="image/png" />
-
-  <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
   <style>
@@ -95,7 +91,7 @@
       height: 100%;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
+      justify-content: center; /* ortalandı */
       align-items: center;
       background-color: #f6f5f4;
       position: relative;
@@ -135,6 +131,10 @@
       pointer-events: none;
     }
 
+    .scroll-down-icon svg {
+      transition: transform 0.3s;
+    }
+
     @keyframes bounceDown {
       0%, 100% { transform: translateX(-50%) translateY(0); opacity: 0.8; }
       50% { transform: translateX(-50%) translateY(10px); opacity: 1; }
@@ -144,56 +144,23 @@
       nav {
         padding: 12px 0;
       }
-
       nav a {
         font-size: 16px;
       }
-
-      nav a:first-child {
-        padding-right: 20px;
-      }
-
-      nav a:last-child {
-        padding-left: 20px;
-      }
-
-      .nav-divider {
-        height: 50%;
-      }
-
-      .swiper-slide img {
-        max-height: calc(70vh - 50px);
-      }
-
-      .scroll-down-icon {
-        bottom: 15px;
-      }
+      nav a:first-child { padding-right: 20px; }
+      nav a:last-child { padding-left: 20px; }
+      .nav-divider { height: 50%; }
+      .swiper-slide img { max-height: calc(70vh - 50px); }
+      .scroll-down-icon { bottom: 15px; }
     }
 
     @media (max-width: 480px) {
-      nav a {
-        font-size: 14px;
-      }
-
-      nav a:first-child {
-        padding-right: 15px;
-      }
-
-      nav a:last-child {
-        padding-left: 15px;
-      }
-
-      .nav-divider {
-        height: 40%;
-      }
-
-      .swiper-slide img {
-        max-height: calc(60vh - 50px);
-      }
-
-      .scroll-down-icon {
-        bottom: 10px;
-      }
+      nav a { font-size: 14px; }
+      nav a:first-child { padding-right: 15px; }
+      nav a:last-child { padding-left: 15px; }
+      .nav-divider { height: 40%; }
+      .swiper-slide img { max-height: calc(60vh - 50px); }
+      .scroll-down-icon { bottom: 10px; }
     }
 
     @media (min-width: 769px) {
@@ -214,32 +181,27 @@
     </div>
   </nav>
 
-  <!-- Scroll Down Icon (her zaman mobilde görünür) -->
-  <div class="scroll-down-icon">
-    <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#6F4F33" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M12 5v14" />
-      <path d="M19 12l-7 7-7-7" />
+  <!-- Scroll Down Icon -->
+  <div class="scroll-down-icon" id="scrollIcon">
+    <svg id="scrollArrow" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#6F4F33" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path id="line1" d="M12 5v14" />
+      <path id="line2" d="M19 12l-7 7-7-7" />
     </svg>
   </div>
 
   <!-- Swiper -->
   <div class="swiper">
     <div class="swiper-wrapper">
-
-      <!-- Slide 1 -->
       <div class="swiper-slide">
         <div class="image-container">
-          <img src="https://beyzamucahid.github.io/static/img/cover.png" alt="Görsel 1" data-swiper-zoomable="true" />
+          <img src="https://beyzamucahid.github.io/static/img/cover.png" alt="Görsel 1" />
         </div>
       </div>
-
-      <!-- Slide 2 -->
       <div class="swiper-slide">
         <div class="image-container">
-          <img src="https://beyzamucahid.github.io/static/img/cover2.png" alt="Görsel 2" data-swiper-zoomable="true" />
+          <img src="https://beyzamucahid.github.io/static/img/cover2.png" alt="Görsel 2" />
         </div>
       </div>
-
     </div>
     <div class="swiper-pagination"></div>
   </div>
@@ -255,10 +217,27 @@
         clickable: true
       },
       mousewheel: true,
-      keyboard: true,
-      zoom: {
-        maxRatio: 3,
-        toggle: true
+      keyboard: true
+    });
+
+    // Ok yönü için
+    const arrow = document.getElementById("scrollArrow");
+    swiper.on('slideChange', () => {
+      const isLast = swiper.activeIndex === swiper.slides.length - 1;
+      const isFirst = swiper.activeIndex === 0;
+
+      if (!isLast) {
+        // Aşağı bakan ok
+        arrow.innerHTML = `
+          <path d="M12 5v14" />
+          <path d="M19 12l-7 7-7-7" />
+        `;
+      } else {
+        // Yukarı bakan ok
+        arrow.innerHTML = `
+          <path d="M12 19V5" />
+          <path d="M5 12l7-7 7 7" />
+        `;
       }
     });
   </script>
